--- a/Stylist/Base.lproj/Main.storyboard
+++ b/Stylist/Base.lproj/Main.storyboard
@@ -238,45 +238,48 @@
             </objects>
             <point key="canvasLocation" x="71" y="-967"/>
         </scene>
-        <!--New View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="J00-nZ-Yq8">
             <objects>
-                <viewController id="Rz1-LF-e1Z" customClass="NewViewController" customModule="Stylist" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Rz1-LF-e1Z" customClass="DetailViewController" customModule="Stylist" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jGE-MB-efR">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="GDa-TH-CYi" customClass="PFImageView">
+                                <rect key="frame" x="32" y="55" width="257" height="457"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
                             <navigationBar contentMode="scaleToFill" id="qM0-2y-taM">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Image" id="JSB-qi-OC1">
-                                        <barButtonItem key="leftBarButtonItem" style="plain" id="6ch-H2-9I7">
-                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="lhl-qA-Bb1">
-                                                <rect key="frame" x="-23" y="-15" width="71" height="30"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" title="Back">
-                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
-                                            </button>
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="o8N-Jk-atb">
+                                            <connections>
+                                                <action selector="saveButton:" destination="Rz1-LF-e1Z" id="ire-b0-FZa"/>
+                                            </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="GDa-TH-CYi">
-                                <rect key="frame" x="16" y="50" width="288" height="512"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="puh-Rt-Vei">
+                                <rect key="frame" x="32" y="526" width="257" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <outlet property="imageView" destination="GDa-TH-CYi" id="O2g-Pg-oTk"/>
+                        <outlet property="topsImageView" destination="GDa-TH-CYi" id="FUw-Uv-Dg1"/>
+                        <outlet property="topsLabel" destination="puh-Rt-Vei" id="DFS-u6-ws9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6KV-Ki-CzE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-62" y="-187"/>
+            <point key="canvasLocation" x="60" y="-187"/>
         </scene>
         <!--Tops View Controller-->
         <scene sceneID="9o3-eY-HEm">
